scsi: lpfc: Ensure HBA_SETUP flag is used only for SLI4 in dev_loss_tmo_callbk (bsc#1245260 bsc#1243100 bsc#1246125).

--- a/series.conf
+++ b/series.conf
@@ -9911,6 +9911,7 @@
 	patches.suse/scsi-lpfc-Early-return-out-of-FDMI-cmpl-for-locally-.patch
 	patches.suse/scsi-lpfc-Simplify-error-handling-for-failed-lpfc_ge.patch
 	patches.suse/scsi-lpfc-Relocate-clearing-initial-phba-flags-from-.patch
+	patches.suse/scsi-lpfc-Ensure-HBA_SETUP-flag-is-used-only-for-SLI.patch
 
 	# out-of-tree patches
 	patches.suse/powerpc-pseries-dlpar-Search-DRC-index-from-ibm-drc-.patch
