--- a/series.conf
+++ b/series.conf
@@ -9912,6 +9912,7 @@
 	patches.suse/scsi-lpfc-Simplify-error-handling-for-failed-lpfc_ge.patch
 	patches.suse/scsi-lpfc-Relocate-clearing-initial-phba-flags-from-.patch
 	patches.suse/scsi-lpfc-Ensure-HBA_SETUP-flag-is-used-only-for-SLI.patch
+	patches.suse/scsi-lpfc-Move-clearing-of-HBA_SETUP-flag-to-before-.patch
 
 	# out-of-tree patches
 	patches.suse/powerpc-pseries-dlpar-Search-DRC-index-from-ibm-drc-.patch
