--- a/series.conf
+++ b/series.conf
@@ -9905,6 +9905,7 @@
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Revise-logging-format-for-failed-CT-MIB-re.patch
+	patches.suse/scsi-lpfc-Update-debugfs-trace-ring-initialization-m.patch
 
 	# out-of-tree patches
 	patches.suse/powerpc-pseries-dlpar-Search-DRC-index-from-ibm-drc-.patch
