scsi: lpfc: Relocate clearing initial phba flags from link up to link down hdlr (bsc#1245260 bsc#1243100 bsc#1246125).

--- a/series.conf
+++ b/series.conf
@@ -9910,6 +9910,7 @@
 	patches.suse/scsi-lpfc-Skip-RSCN-processing-when-FC_UNLOADING-fla.patch
 	patches.suse/scsi-lpfc-Early-return-out-of-FDMI-cmpl-for-locally-.patch
 	patches.suse/scsi-lpfc-Simplify-error-handling-for-failed-lpfc_ge.patch
+	patches.suse/scsi-lpfc-Relocate-clearing-initial-phba-flags-from-.patch
 
 	# out-of-tree patches
 	patches.suse/powerpc-pseries-dlpar-Search-DRC-index-from-ibm-drc-.patch
