scsi: lpfc: Revise logging format for failed CT MIB requests (bsc#1245260 bsc#1243100 bsc#1246125).

--- a/series.conf
+++ b/series.conf
@@ -9903,6 +9903,9 @@
 	patches.suse/net-phy-smsc-Force-predictable-MDI-X-state-on-LAN87x.patch
 	patches.suse/net-phy-smsc-Fix-link-failure-in-forced-mode-with-Au.patch
 
+	# mkp/scsi queue
+	patches.suse/scsi-lpfc-Revise-logging-format-for-failed-CT-MIB-re.patch
+
 	# out-of-tree patches
 	patches.suse/powerpc-pseries-dlpar-Search-DRC-index-from-ibm-drc-.patch
 
