scsi: lpfc: Copyright updates for 14.4.0.10 patches (bsc#1245260 bsc#1243100 bsc#1246125).

--- a/series.conf
+++ b/series.conf
@@ -9916,6 +9916,7 @@
 	patches.suse/scsi-lpfc-Revise-CQ_CREATE_SET-mailbox-bitfield-defi.patch
 	patches.suse/scsi-lpfc-Modify-end-of-life-adapters-model-descript.patch
 	patches.suse/scsi-lpfc-Update-lpfc-version-to-14.4.0.10.patch
+	patches.suse/scsi-lpfc-Copyright-updates-for-14.4.0.10-patches.patch
 
 	# out-of-tree patches
 	patches.suse/powerpc-pseries-dlpar-Search-DRC-index-from-ibm-drc-.patch
