--- a/series.conf
+++ b/series.conf
@@ -32987,6 +32987,7 @@
 	patches.suse/scsi-lpfc-Revise-CQ_CREATE_SET-mailbox-bitfield-defi.patch
 	patches.suse/scsi-lpfc-Modify-end-of-life-adapters-model-descript.patch
 	patches.suse/scsi-lpfc-Update-lpfc-version-to-14.4.0.10.patch
+	patches.suse/scsi-lpfc-Copyright-updates-for-14.4.0.10-patches.patch
 
 	########################################################
 	# end of sorted patches
