--- a/series.conf
+++ b/series.conf
@@ -32915,6 +32915,7 @@
 	patches.suse/Bluetooth-MGMT-set_mesh-update-LE-scan-interval-and-.patch
 	patches.suse/Bluetooth-MGMT-mesh_send-check-instances-prior-disab.patch
 	patches.suse/rose-fix-dangling-neighbour-pointers-in-rose_rt_devi.patch
+	patches.suse/nvme-Fix-incorrect-cdw15-value-in-passthru-error-log.patch
 	patches.suse/dma-buf-fix-timeout-handling-in-dma_resv_wait_timeou.patch
 	patches.suse/drm-ttm-fix-error-handling-in-ttm_buffer_object_tran.patch
 	patches.suse/drm-bridge-panel-move-prepare_prev_first-handling-to.patch
