nvme-multipath: fix suspicious RCU usage warning (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -9835,6 +9835,7 @@
 	patches.suse/nvme-Fix-incorrect-cdw15-value-in-passthru-error-log.patch
 	patches.suse/nvmet-fix-memory-leak-of-bio-integrity.patch
 	patches.suse/nvme-pci-refresh-visible-attrs-after-being-checked.patch
+	patches.suse/nvme-multipath-fix-suspicious-RCU-usage-warning.patch
 	patches.suse/drm-amdkfd-Don-t-call-mmput-from-MMU-notifier-callba.patch
 	patches.suse/dma-buf-fix-timeout-handling-in-dma_resv_wait_timeou.patch
 	patches.suse/drm-ttm-fix-error-handling-in-ttm_buffer_object_tran.patch
