blacklist.conf: Add 202e14222fad memfd: do not -EACCES old memfd_create() users with vm.memfd_noexec=2

--- a/blacklist.conf
+++ b/blacklist.conf
@@ -960,3 +960,4 @@ c9b19ea63036fc537a69265acea1b18dabd1cbd3 # fix a warning if CONFIG_NEED_DMA_MAP_
 46fee9e38995af9ae16a8cc7d05031486d44cf35 # cleanup, not a fix
 c7f50d0433a016d43681592836a3d484817bfb34 # CVE-2025-38096 https://bugzilla.suse.com/show_bug.cgi?id=1245657#c1
 f9af88a3d384c8b55beb5dc5483e5da0135fadbd # breaks kABI
+202e14222fadb246dfdf182e67de1518e86a1e20 # don't change UAPI in MU unless problems are reported
