thermal: trip: Use common set of trip type names (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -39324,6 +39324,7 @@
 	patches.suse/ELF-fix-kernel.randomize_va_space-double-read.patch
 	patches.suse/randomize_kstack-Improve-stack-alignment-codegen.patch
 	patches.suse/sysctl-always-initialize-i_uid-i_gid.patch
+	patches.suse/thermal-trip-Use-common-set-of-trip-type-names.patch
 	patches.suse/thermal-gov_bang_bang-Drop-unnecessary-cooling-devic.patch
 	patches.suse/thermal-drivers-broadcom-Fix-race-between-removal-an.patch
 	patches.suse/thermal-intel-intel_tcc_cooling-Switch-to-new-Intel-CPU-mo.patch
