--- a/series.conf
+++ b/series.conf
@@ -39325,6 +39325,7 @@
 	patches.suse/randomize_kstack-Improve-stack-alignment-codegen.patch
 	patches.suse/sysctl-always-initialize-i_uid-i_gid.patch
 	patches.suse/thermal-trip-Use-common-set-of-trip-type-names.patch
+	patches.suse/thermal-trip-Use-READ_ONCE-for-lockless-access-to-tr.patch
 	patches.suse/thermal-gov_bang_bang-Drop-unnecessary-cooling-devic.patch
 	patches.suse/thermal-drivers-broadcom-Fix-race-between-removal-an.patch
 	patches.suse/thermal-intel-intel_tcc_cooling-Switch-to-new-Intel-CPU-mo.patch
