scsi: fnic: Fix crash in fnic_wq_cmpl_handler when FDMI times out (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -53851,6 +53851,7 @@
 	patches.suse/ACPICA-Refuse-to-evaluate-a-method-if-arguments-are-.patch
 	patches.suse/sunrpc-handle-SVC_GARBAGE-during-svc-auth-processing-as-auth-error.patch
 	patches.suse/dm-raid-fix-variable-in-journal-device-check.patch
+	patches.suse/scsi-fnic-Fix-crash-in-fnic_wq_cmpl_handler-when-FDMI-time.patch
 	patches.suse/msft-hv-3283-net-mana-Record-doorbell-physical-address-in-PF-mode.patch
 	patches.suse/Bluetooth-L2CAP-Fix-L2CAP-MTU-negotiation.patch
 	patches.suse/bnxt-properly-flush-XDP-redirect-lists.patch
