--- a/series.conf
+++ b/series.conf
@@ -53852,6 +53852,7 @@
 	patches.suse/sunrpc-handle-SVC_GARBAGE-during-svc-auth-processing-as-auth-error.patch
 	patches.suse/dm-raid-fix-variable-in-journal-device-check.patch
 	patches.suse/scsi-fnic-Fix-crash-in-fnic_wq_cmpl_handler-when-FDMI-time.patch
+	patches.suse/scsi-fnic-Turn-off-FDMI-ACTIVE-flags-on-link-down.patch
 	patches.suse/msft-hv-3283-net-mana-Record-doorbell-physical-address-in-PF-mode.patch
 	patches.suse/Bluetooth-L2CAP-Fix-L2CAP-MTU-negotiation.patch
 	patches.suse/bnxt-properly-flush-XDP-redirect-lists.patch
