objtool: Add bch2_trans_unlocked_error() to bcachefs noreturns (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -3309,6 +3309,7 @@
 	patches.suse/btrfs-fix-transaction-atomicity-bug-when-enabling-si.patch
 	patches.suse/PCI-MSI-Handle-lack-of-irqdomain-gracefully.patch
 	patches.suse/locking-rtmutex-Make-sure-we-wake-anything-on-the-wake_q-when-we-release-the-lock-wait_lock.patch
+	patches.suse/objtool-Add-bch2_trans_unlocked_error-to-bcachefs-noreturn.patch
 	patches.suse/perf-x86-intel-uncore-Add-Clearwater-Forest-support.patch
 	patches.suse/perf-x86-intel-ds-Add-PEBS-format-6.patch
 	patches.suse/perf-x86-intel-Fix-bitmask-of-OCR-and-FRONTEND-events-for-.patch
