objtool: Fix C jump table annotations for Clang (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -6046,6 +6046,7 @@
 	patches.suse/tracing-Fix-bad-hist-from-corrupting-named_triggers-list.patch
 	patches.suse/ftrace-Avoid-potential-division-by-zero-in-function_stat_s.patch
 	patches.suse/vmlinux.lds-Ensure-that-const-vars-with-relocations-.patch
+	patches.suse/objtool-Fix-C-jump-table-annotations-for-Clang.patch
 	patches.suse/perf-core-Add-RCU-read-lock-protection-to-perf_itera.patch
 	patches.suse/perf-core-Order-the-PMU-list-to-fix-warning-about-unordered-pmu_ctx_list.patch
 	patches.suse/uprobes-Reject-the-shared-zeropage-in-uprobe_write_o.patch
