--- a/series.conf
+++ b/series.conf
@@ -6501,6 +6501,7 @@
 	patches.suse/Flush-console-log-from-kernel_power_off.patch
 	patches.suse/lockdep-mm-Fix-might_fault-lockdep-check-of-current-mm-mmap_lock.patch
 	patches.suse/lockdep-Don-t-disable-interrupts-on-RT-in-disable_ir.patch
+	patches.suse/x86-traps-Make-exc_double_fault-consistently-noreturn.patch
 	patches.suse/sched-Cancel-the-slice-protection-of-the-idle-entity.patch
 	patches.suse/sched-Reduce-the-default-slice-to-avoid-tasks-getting-an-extra-tick.patch
 	patches.suse/sched-Don-t-define-sched_clock_irqtime-as-static-key.patch
