dm-bufio: fix sched in atomic context (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -9902,6 +9902,7 @@
 	patches.suse/net-phy-smsc-Fix-Auto-MDIX-configuration-when-disabl.patch
 	patches.suse/net-phy-smsc-Force-predictable-MDI-X-state-on-LAN87x.patch
 	patches.suse/net-phy-smsc-Fix-link-failure-in-forced-mode-with-Au.patch
+	patches.suse/dm-bufio-fix-sched-in-atomic-context.patch
 
 	# out-of-tree patches
 	patches.suse/powerpc-pseries-dlpar-Search-DRC-index-from-ibm-drc-.patch
