--- a/series.conf
+++ b/series.conf
@@ -32989,6 +32989,7 @@
 	patches.suse/drm-tegra-nvdec-Fix-dma_alloc_coherent-error-check.patch
 	patches.suse/maple_tree-fix-mt_destroy_walk-on-root-leaf-node.patch
 	patches.suse/kasan-remove-kasan_find_vm_area-to-prevent-possible-.patch
+	patches.suse/dm-bufio-fix-sched-in-atomic-context.patch
 
 	########################################################
 	# end of sorted patches
