--- a/series.conf
+++ b/series.conf
@@ -32876,6 +32876,7 @@
 	patches.suse/drm-ssd130x-fix-ssd132x_clear_screen-columns.patch
 	patches.suse/drm-nouveau-bl-increase-buffer-size-to-avoid-truncat.patch
 	patches.suse/drm-etnaviv-Protect-the-scheduler-s-pending-list-wit.patch
+	patches.suse/aoe-clean-device-rq_list-in-aoedev_downdev.patch
 	patches.suse/ALSA-hda-intel-Add-Thinkpad-E15-to-PM-deny-list.patch
 	patches.suse/ALSA-hda-realtek-Fix-built-in-mic-on-ASUS-VivoBook-X.patch
 	patches.suse/ALSA-sb-Don-t-allow-changing-the-DMA-mode-during-ope.patch
