--- a/series.conf
+++ b/series.conf
@@ -32936,6 +32936,7 @@
 	patches.suse/rose-fix-dangling-neighbour-pointers-in-rose_rt_devi.patch
 	patches.suse/scsi-qla2xxx-Fix-DMA-mapping-test-in-qla24xx_get_port_data.patch
 	patches.suse/scsi-qla4xxx-Fix-missing-DMA-mapping-error-in-qla4xxx_allo.patch
+	patches.suse/scsi-core-Enforce-unlimited-max_segment_size-when-virt_bou.patch
 	patches.suse/dma-buf-fix-timeout-handling-in-dma_resv_wait_timeou.patch
 	patches.suse/drm-ttm-fix-error-handling-in-ttm_buffer_object_tran.patch
 	patches.suse/drm-bridge-panel-move-prepare_prev_first-handling-to.patch
