md/md-bitmap: fix dm-raid max_write_behind setting (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -32783,6 +32783,7 @@
 	patches.suse/USB-serial-pl2303-add-new-chip-PL2303GC-Q20-and-PL23.patch
 	patches.suse/loop-add-file_start_write-and-file_end_write.patch
 	patches.suse/md-raid1-raid10-don-t-handle-IO-error-for-REQ_RAHEAD-and-R.patch
+	patches.suse/md-md-bitmap-fix-dm-raid-max_write_behind-setting.patch
 	patches.suse/nvme-fix-command-limits-status-code.patch
 	patches.suse/nvme-fix-implicit-bool-to-flags-conversion.patch
 	patches.suse/regulator-max14577-Add-error-check-for-max14577_read.patch
