--- a/series.conf
+++ b/series.conf
@@ -32892,6 +32892,7 @@
 	patches.suse/ACPICA-Refuse-to-evaluate-a-method-if-arguments-are-.patch
 	patches.suse/sunrpc-handle-SVC_GARBAGE-during-svc-auth-processing-as-auth-error.patch
 	patches.suse/dm-raid-fix-variable-in-journal-device-check.patch
+	patches.suse/scsi-megaraid_sas-Fix-invalid-node-index.patch
 	patches.suse/msft-hv-3283-net-mana-Record-doorbell-physical-address-in-PF-mode.patch
 	patches.suse/Bluetooth-L2CAP-Fix-L2CAP-MTU-negotiation.patch
 	patches.suse/bnxt-properly-flush-XDP-redirect-lists.patch
