perf tool_pmu: Fix aggregation on duration_time (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -9455,6 +9455,7 @@
 	patches.suse/tools-build-Don-t-show-libunwind-build-status-as-it-is-opt-in.patch
 	patches.suse/perf-build-Warn-when-libdebuginfod-devel-files-are-not-ava.patch
 	patches.suse/perf-ui-browser-hists-Set-actions-thread-before-calling-do.patch
+	patches.suse/perf-tool_pmu-Fix-aggregation-on-duration_time.patch
 	patches.suse/dm-don-t-change-md-if-dm_table_set_restrictions-fail.patch
 	patches.suse/dm-free-table-mempools-if-not-used-in-__bind.patch
 	patches.suse/dm-handle-failures-in-dm_table_set_restrictions.patch
