--- a/series.conf
+++ b/series.conf
@@ -9795,6 +9795,7 @@
 	patches.suse/nfsd-use-threads-array-as-is-in-netlink-interface.patch
 	patches.suse/sunrpc-handle-SVC_GARBAGE-during-svc-auth-processing-as-auth-error.patch
 	patches.suse/perf-Fix-cgroup-state-vs-ERROR.patch
+	patches.suse/perf-Fix-dangling-cgroup-pointer-in-cpuctx.patch
 	patches.suse/dm-raid-fix-variable-in-journal-device-check.patch
 	patches.suse/spi-spi-cadence-quadspi-Fix-pm-runtime-unbalance.patch
 	patches.suse/msft-hv-3283-net-mana-Record-doorbell-physical-address-in-PF-mode.patch
