--- a/series.conf
+++ b/series.conf
@@ -9459,6 +9459,7 @@
 	patches.suse/perf-symbol-minimal-Fix-double-free-in-filename__read_buil.patch
 	patches.suse/perf-trace-Fix-leaks-of-struct-thread-in-set_filter_loop_p.patch
 	patches.suse/perf-tests-Fix-perf-report-tests-installation.patch
+	patches.suse/perf-intel-pt-Fix-PEBS-via-PT-data_src.patch
 	patches.suse/dm-don-t-change-md-if-dm_table_set_restrictions-fail.patch
 	patches.suse/dm-free-table-mempools-if-not-used-in-__bind.patch
 	patches.suse/dm-handle-failures-in-dm_table_set_restrictions.patch
