perf evsel: Missed close() when probing hybrid core PMUs (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -9788,6 +9788,7 @@
 	patches.suse/gpio-mlxbf3-only-get-IRQ-for-device-instance-0.patch
 	patches.suse/scsi-elx-efct-Fix-memory-leak-in-efct_hw_parse_filter.patch
 	patches.suse/mtd-spinand-fix-memory-leak-of-ECC-engine-conf.patch
+	patches.suse/perf-evsel-Missed-close-when-probing-hybrid-core-PMUs.patch
 	patches.suse/PCI-PM-Set-up-runtime-PM-even-for-devices-without-PC.patch
 	patches.suse/ACPICA-Refuse-to-evaluate-a-method-if-arguments-are-.patch
 	patches.suse/nfsd-use-threads-array-as-is-in-netlink-interface.patch
