perf/hw_breakpoint: Return EOPNOTSUPP for unsupported breakpoint type (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -6539,6 +6539,7 @@
 	patches.suse/perf-Avoid-the-read-if-the-count-is-already-updated.patch
 	patches.suse/perf-amd-ibs-Add-support-for-OP-Load-Latency-Filtering.patch
 	patches.suse/perf-amd-ibs-Update-DTLB-PageSize-decode-logic.patch
+	patches.suse/perf-hw_breakpoint-Return-EOPNOTSUPP-for-unsupported-break.patch
 	patches.suse/perf-core-Simplify-the-perf_event_alloc-error-path.patch
 	patches.suse/perf-core-Simplify-the-perf_pmu_register-error-path.patch
 	patches.suse/perf-core-Simplify-perf_pmu_register.patch
