--- a/series.conf
+++ b/series.conf
@@ -8877,6 +8877,7 @@
 	patches.suse/powerpc-pseries-iommu-Fix-kmemleak-in-TCE-table-user.patch
 	patches.suse/sched-topology-improve-topology_span_sane-speed.patch
 	patches.suse/sched-topology-Refinement-to-topology_span_sane-speedup.patch
+	patches.suse/perf-Ensure-bpf_perf_link-path-is-properly-serialized.patch
 	patches.suse/x86-alternative-Remove-unused-header-defines.patch
 	patches.suse/x86-bugs-Rename-mmio_stale_data_clear-to-cpu_buf_vm_clear.patch
 	patches.suse/x86-bugs-Restructure-MDS-mitigation.patch
