perf build: Warn when libdebuginfod devel files are not available (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -9453,6 +9453,7 @@
 	patches.suse/cxl-core-region-ignore-interleave-granularity-when-w.patch
 	patches.suse/tools-build-Don-t-set-libunwind-as-available-if-test-all.c.patch
 	patches.suse/tools-build-Don-t-show-libunwind-build-status-as-it-is-opt-in.patch
+	patches.suse/perf-build-Warn-when-libdebuginfod-devel-files-are-not-ava.patch
 	patches.suse/dm-don-t-change-md-if-dm_table_set_restrictions-fail.patch
 	patches.suse/dm-free-table-mempools-if-not-used-in-__bind.patch
 	patches.suse/dm-handle-failures-in-dm_table_set_restrictions.patch
