perf trace: Fix leaks of 'struct thread' in set_filter_loop_pids() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -9457,6 +9457,7 @@
 	patches.suse/perf-ui-browser-hists-Set-actions-thread-before-calling-do.patch
 	patches.suse/perf-tool_pmu-Fix-aggregation-on-duration_time.patch
 	patches.suse/perf-symbol-minimal-Fix-double-free-in-filename__read_buil.patch
+	patches.suse/perf-trace-Fix-leaks-of-struct-thread-in-set_filter_loop_p.patch
 	patches.suse/dm-don-t-change-md-if-dm_table_set_restrictions-fail.patch
 	patches.suse/dm-free-table-mempools-if-not-used-in-__bind.patch
 	patches.suse/dm-handle-failures-in-dm_table_set_restrictions.patch
