--- a/series.conf
+++ b/series.conf
@@ -9456,6 +9456,7 @@
 	patches.suse/perf-build-Warn-when-libdebuginfod-devel-files-are-not-ava.patch
 	patches.suse/perf-ui-browser-hists-Set-actions-thread-before-calling-do.patch
 	patches.suse/perf-tool_pmu-Fix-aggregation-on-duration_time.patch
+	patches.suse/perf-symbol-minimal-Fix-double-free-in-filename__read_buil.patch
 	patches.suse/dm-don-t-change-md-if-dm_table_set_restrictions-fail.patch
 	patches.suse/dm-free-table-mempools-if-not-used-in-__bind.patch
 	patches.suse/dm-handle-failures-in-dm_table_set_restrictions.patch
