perf/x86/amd/uncore: Remove unused 'struct amd_uncore_ctx::node' member (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -8878,6 +8878,7 @@
 	patches.suse/sched-topology-improve-topology_span_sane-speed.patch
 	patches.suse/sched-topology-Refinement-to-topology_span_sane-speedup.patch
 	patches.suse/perf-Ensure-bpf_perf_link-path-is-properly-serialized.patch
+	patches.suse/perf-x86-amd-uncore-Remove-unused-struct-amd_uncore_ctx-no.patch
 	patches.suse/x86-alternative-Remove-unused-header-defines.patch
 	patches.suse/x86-bugs-Rename-mmio_stale_data_clear-to-cpu_buf_vm_clear.patch
 	patches.suse/x86-bugs-Restructure-MDS-mitigation.patch
