--- a/series.conf
+++ b/series.conf
@@ -9461,6 +9461,7 @@
 	patches.suse/perf-tests-Fix-perf-report-tests-installation.patch
 	patches.suse/perf-intel-pt-Fix-PEBS-via-PT-data_src.patch
 	patches.suse/perf-scripts-python-exported-sql-viewer.py-Fix-pattern-mat.patch
+	patches.suse/perf-tests-switch-tracking-Fix-timestamp-comparison.patch
 	patches.suse/dm-don-t-change-md-if-dm_table_set_restrictions-fail.patch
 	patches.suse/dm-free-table-mempools-if-not-used-in-__bind.patch
 	patches.suse/dm-handle-failures-in-dm_table_set_restrictions.patch
