perf symbol: Fix use-after-free in filename__read_build_id (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -9463,6 +9463,7 @@
 	patches.suse/perf-scripts-python-exported-sql-viewer.py-Fix-pattern-mat.patch
 	patches.suse/perf-tests-switch-tracking-Fix-timestamp-comparison.patch
 	patches.suse/perf-pmu-Avoid-segv-for-missing-name-alias_name-in-wildcar.patch
+	patches.suse/perf-symbol-Fix-use-after-free-in-filename__read_build_id.patch
 	patches.suse/dm-don-t-change-md-if-dm_table_set_restrictions-fail.patch
 	patches.suse/dm-free-table-mempools-if-not-used-in-__bind.patch
 	patches.suse/dm-handle-failures-in-dm_table_set_restrictions.patch
