--- a/series.conf
+++ b/series.conf
@@ -9467,6 +9467,7 @@
 	patches.suse/perf-record-Fix-incorrect-user-regs-comments.patch
 	patches.suse/perf-trace-Always-print-return-value-for-syscalls-returnin.patch
 	patches.suse/perf-trace-Set-errpid-to-false-for-rseq-and-set_robust_lis.patch
+	patches.suse/perf-callchain-Always-populate-the-addr_location-map-when-.patch
 	patches.suse/dm-don-t-change-md-if-dm_table_set_restrictions-fail.patch
 	patches.suse/dm-free-table-mempools-if-not-used-in-__bind.patch
 	patches.suse/dm-handle-failures-in-dm_table_set_restrictions.patch
