--- a/series.conf
+++ b/series.conf
@@ -9465,6 +9465,7 @@
 	patches.suse/perf-pmu-Avoid-segv-for-missing-name-alias_name-in-wildcar.patch
 	patches.suse/perf-symbol-Fix-use-after-free-in-filename__read_build_id.patch
 	patches.suse/perf-record-Fix-incorrect-user-regs-comments.patch
+	patches.suse/perf-trace-Always-print-return-value-for-syscalls-returnin.patch
 	patches.suse/dm-don-t-change-md-if-dm_table_set_restrictions-fail.patch
 	patches.suse/dm-free-table-mempools-if-not-used-in-__bind.patch
 	patches.suse/dm-handle-failures-in-dm_table_set_restrictions.patch
