tools build: Don't set libunwind as available if test-all.c build succeeds (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -9451,6 +9451,7 @@
 	patches.suse/leds-multicolor-Fix-intensity-setting-while-SW-blink.patch
 	patches.suse/backlight-pm8941-Add-NULL-check-in-wled_configure.patch
 	patches.suse/cxl-core-region-ignore-interleave-granularity-when-w.patch
+	patches.suse/tools-build-Don-t-set-libunwind-as-available-if-test-all.c.patch
 	patches.suse/dm-don-t-change-md-if-dm_table_set_restrictions-fail.patch
 	patches.suse/dm-free-table-mempools-if-not-used-in-__bind.patch
 	patches.suse/dm-handle-failures-in-dm_table_set_restrictions.patch
