--- a/series.conf
+++ b/series.conf
@@ -9829,6 +9829,7 @@
 	patches.suse/drm-bridge-ti-sn65dsi86-Add-HPD-for-DisplayPort-conn.patch
 	patches.suse/i2c-robotfuzz-osif-disable-zero-length-read-messages.patch
 	patches.suse/i2c-tiny-usb-disable-zero-length-read-messages.patch
+	patches.suse/perf-aux-Fix-pending-disable-flow-when-the-AUX-ring-buffer.patch
 	patches.suse/serial-core-restore-of_node-information-in-sysfs.patch
 	patches.suse/serial-imx-Restore-original-RXTL-for-console-to-fix-.patch
 	patches.suse/staging-rtl8723bs-Avoid-memset-in-aes_cipher-and-aes.patch
