perf/core: Fix the WARN_ON_ONCE is out of lock protected region (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -9908,6 +9908,7 @@
 	patches.suse/firmware-arm_ffa-Fix-memory-leak-by-freeing-notifier.patch
 	patches.suse/powercap-intel_rapl-Do-not-change-CLAMPING-bit-if-EN.patch
 	patches.suse/i2c-designware-Fix-an-initialization-issue.patch
+	patches.suse/perf-core-Fix-the-WARN_ON_ONCE-is-out-of-lock-protected-region.patch
 	patches.suse/perf-Revert-to-requiring-CAP_SYS_ADMIN-for-uprobes.patch
 	patches.suse/x86-bugs-Add-a-Transient-Scheduler-Attacks-mitigation.patch
 	patches.suse/KVM-SVM-Advertise-TSA-CPUID-bits-to-guests.patch
