selftests/bpf: Set test path for token/obj_priv_implicit_token_envvar (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -687,6 +687,7 @@
 	patches.suse/selftests-bpf-skip-the-timer_lockup-test-for-single-.patch
 	patches.suse/bpf-Use-function-pointers-count-as-struct_ops-links-.patch
 	patches.suse/bpf-Add-kernel-symbol-for-struct_ops-trampoline.patch
+	patches.suse/selftests-bpf-Set-test-path-for-token-obj_priv_impli.patch
 	patches.suse/msft-hv-3072-net-mana-Increase-the-DEF_RX_BUFFERS_PER_QUEUE-to-10.patch
 	patches.suse/msft-hv-3073-net-mana-Add-get_link-and-get_link_ksettings-in-etht.patch
 	patches.suse/lib-packing-refuse-operating-on-bit-indices-which-ex.patch
