iommu/amd: Set the pgsize_bitmap correctly (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -27944,6 +27944,7 @@
 	patches.suse/iommu-vt-d-Always-reserve-a-domain-ID-for-identity-s.patch
 	patches.suse/iommu-vt-d-Fix-potential-lockup-if-qi_submit_sync-ca.patch
 	patches.suse/iommu-amd-Allocate-the-page-table-root-using-GFP_KER.patch
+	patches.suse/iommu-amd-Set-the-pgsize_bitmap-correctly.patch
 	patches.suse/iommu-amd-Fix-typo-of-instead-of.patch
 	patches.suse/iommu-amd-Do-not-set-the-D-bit-on-AMD-v2-table-entri.patch
 	patches.suse/fbdev-hpfb-Fix-an-error-handling-path-in-hpfb_dio_pr.patch
