--- a/blacklist.conf
+++ b/blacklist.conf
@@ -410,3 +410,4 @@ f9af88a3d384c8b55beb5dc5483e5da0135fadbd # kABI breakage
 1156b5e8be98c97087f8971609c852e418daf03b # cleanup designed to break kABI
 907af7d6e0c8cf4086b1bc5218281b2ca09f130b # irrelevant in our configs
 5e0e02f0d7e52cfc8b1adfc778dd02181d8b47b4 # cleanup breaking kABI
+f3b93547b91ad849b58eb5ab2dd070950ad7beb3 # cleanup breaking kABI
