wifi: zd1211rw: Fix potential NULL pointer dereference in zd_mac_tx_to_dev() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -9905,6 +9905,7 @@
 	patches.suse/net-phy-smsc-Fix-Auto-MDIX-configuration-when-disabl.patch
 	patches.suse/net-phy-smsc-Force-predictable-MDI-X-state-on-LAN87x.patch
 	patches.suse/net-phy-smsc-Fix-link-failure-in-forced-mode-with-Au.patch
+	patches.suse/wifi-zd1211rw-Fix-potential-NULL-pointer-dereference.patch
 
 	# out-of-tree patches
 	patches.suse/powerpc-pseries-dlpar-Search-DRC-index-from-ibm-drc-.patch
