wifi: mt76: mt7925: fix the wrong config for tx interrupt (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -9909,6 +9909,7 @@
 	patches.suse/wifi-mac80211-fix-non-transmitted-BSSID-profile-sear.patch
 	patches.suse/wifi-mwifiex-discard-erroneous-disassoc-frames-on-ST.patch
 	patches.suse/wifi-rt2x00-fix-remove-callback-type-mismatch.patch
+	patches.suse/wifi-mt76-mt7925-fix-the-wrong-config-for-tx-interru.patch
 
 	# out-of-tree patches
 	patches.suse/powerpc-pseries-dlpar-Search-DRC-index-from-ibm-drc-.patch
