wifi: mt76: mt7925: fix invalid array index in ssid assignment during hw scan (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -9910,6 +9910,7 @@
 	patches.suse/wifi-mwifiex-discard-erroneous-disassoc-frames-on-ST.patch
 	patches.suse/wifi-rt2x00-fix-remove-callback-type-mismatch.patch
 	patches.suse/wifi-mt76-mt7925-fix-the-wrong-config-for-tx-interru.patch
+	patches.suse/wifi-mt76-mt7925-fix-invalid-array-index-in-ssid-ass.patch
 
 	# out-of-tree patches
 	patches.suse/powerpc-pseries-dlpar-Search-DRC-index-from-ibm-drc-.patch
