blacklist.conf: Add "objtool/rust: add one more `noreturn` Rust function for Rust 1.86.0"
Rust only.

--- a/blacklist.conf
+++ b/blacklist.conf
@@ -406,3 +406,4 @@ c9b19ea63036fc537a69265acea1b18dabd1cbd3 # fix a warning if CONFIG_NEED_DMA_MAP_
 f9af88a3d384c8b55beb5dc5483e5da0135fadbd # kABI breakage
 ef753d66051ca03bee1982ce047f9eaf90f81ab4 # clang only
 1154bbd326de4453858cf78cf29420888b3ffd52 # too complex, not worth it
+a3cd5f507b72c0532c3345b6913557efab34f405 # rust
