ixgbe: wrap netdev_priv() usage (jsc#PED-12380 bsc#1245410 bsc#1246128).

--- a/series.conf
+++ b/series.conf
@@ -9102,6 +9102,7 @@
 	patches.suse/i40e-fix-MMIO-write-access-to-an-invalid-page-in-i40.patch
 	patches.suse/ixgbe-Fix-unreachable-retry-logic-in-combined-and-by.patch
 	patches.suse/net-mlx5-HWS-Fix-matcher-action-template-attach.patch
+	patches.suse/ixgbe-wrap-netdev_priv-usage.patch
 	patches.suse/net-ibmveth-Indented-struct-ibmveth_adapter-correctl.patch
 	patches.suse/net-ibmveth-Reset-the-adapter-when-unexpected-states.patch
 	patches.suse/net-ibmveth-added-KUnit-tests-for-some-buffer-pool-f.patch
