ixgbe: add .info_get extension specific for E610 devices (jsc#PED-12380 bsc#1245410 bsc#1246128).

--- a/series.conf
+++ b/series.conf
@@ -9108,6 +9108,7 @@
 	patches.suse/ixgbe-add-E610-functions-for-acquiring-flash-data.patch
 	patches.suse/ixgbe-read-the-OROM-version-information.patch
 	patches.suse/ixgbe-read-the-netlist-version-information.patch
+	patches.suse/ixgbe-add-.info_get-extension-specific-for-E610-devi.patch
 	patches.suse/net-ibmveth-Indented-struct-ibmveth_adapter-correctl.patch
 	patches.suse/net-ibmveth-Reset-the-adapter-when-unexpected-states.patch
 	patches.suse/net-ibmveth-added-KUnit-tests-for-some-buffer-pool-f.patch
