--- a/series.conf
+++ b/series.conf
@@ -9103,6 +9103,7 @@
 	patches.suse/ixgbe-Fix-unreachable-retry-logic-in-combined-and-by.patch
 	patches.suse/net-mlx5-HWS-Fix-matcher-action-template-attach.patch
 	patches.suse/ixgbe-wrap-netdev_priv-usage.patch
+	patches.suse/ixgbe-add-initial-devlink-support.patch
 	patches.suse/net-ibmveth-Indented-struct-ibmveth_adapter-correctl.patch
 	patches.suse/net-ibmveth-Reset-the-adapter-when-unexpected-states.patch
 	patches.suse/net-ibmveth-added-KUnit-tests-for-some-buffer-pool-f.patch
