--- a/series.conf
+++ b/series.conf
@@ -7081,6 +7081,7 @@
 	patches.suse/tcp-bring-back-NUMA-dispersion-in-inet_ehash_locks_a.patch
 	patches.suse/tcp-reorganize-tcp_in_ack_event-and-tcp_count_delive.patch
 	patches.suse/cdc_ether-r8152-ThinkPad-Hybrid-USB-C-A-Dock-quirk.patch
+	patches.suse/ixgbe-add-PTP-support-for-E610-device.patch
 	patches.suse/ieee802154-ca8210-Use-proper-setters-and-getters-for.patch
 	patches.suse/igb-reject-invalid-external-timestamp-requests-for-8.patch
 	patches.suse/broadcom-fix-supported-flag-check-in-periodic-output.patch
