--- a/series.conf
+++ b/series.conf
@@ -9110,6 +9110,7 @@
 	patches.suse/ixgbe-read-the-netlist-version-information.patch
 	patches.suse/ixgbe-add-.info_get-extension-specific-for-E610-devi.patch
 	patches.suse/ixgbe-add-E610-functions-getting-PBA-and-FW-ver-info.patch
+	patches.suse/ixgbe-extend-.info_get-with-stored-versions.patch
 	patches.suse/net-ibmveth-Indented-struct-ibmveth_adapter-correctl.patch
 	patches.suse/net-ibmveth-Reset-the-adapter-when-unexpected-states.patch
 	patches.suse/net-ibmveth-added-KUnit-tests-for-some-buffer-pool-f.patch
