ixgbe: devlink: add devlink region support for E610 (jsc#PED-12380 bsc#1245410 bsc#1246128).

--- a/series.conf
+++ b/series.conf
@@ -9120,6 +9120,7 @@
 	patches.suse/ixgbe-add-support-for-ACPI-WOL-for-E610.patch
 	patches.suse/ixgbe-apply-different-rules-for-setting-FC-on-E610.patch
 	patches.suse/ixgbe-add-E610-.set_phys_id-callback-implementation.patch
+	patches.suse/ixgbe-devlink-add-devlink-region-support-for-E610.patch
 	patches.suse/net-ibmveth-Indented-struct-ibmveth_adapter-correctl.patch
 	patches.suse/net-ibmveth-Reset-the-adapter-when-unexpected-states.patch
 	patches.suse/net-ibmveth-added-KUnit-tests-for-some-buffer-pool-f.patch
