--- a/series.conf
+++ b/series.conf
@@ -9104,6 +9104,7 @@
 	patches.suse/net-mlx5-HWS-Fix-matcher-action-template-attach.patch
 	patches.suse/ixgbe-wrap-netdev_priv-usage.patch
 	patches.suse/ixgbe-add-initial-devlink-support.patch
+	patches.suse/ixgbe-add-handler-for-devlink-.info_get.patch
 	patches.suse/net-ibmveth-Indented-struct-ibmveth_adapter-correctl.patch
 	patches.suse/net-ibmveth-Reset-the-adapter-when-unexpected-states.patch
 	patches.suse/net-ibmveth-added-KUnit-tests-for-some-buffer-pool-f.patch
