--- a/series.conf
+++ b/series.conf
@@ -9118,6 +9118,7 @@
 	patches.suse/ixgbe-add-support-for-FW-rollback-mode.patch
 	patches.suse/ixgbe-create-E610-specific-ethtool_ops-structure.patch
 	patches.suse/ixgbe-add-support-for-ACPI-WOL-for-E610.patch
+	patches.suse/ixgbe-apply-different-rules-for-setting-FC-on-E610.patch
 	patches.suse/net-ibmveth-Indented-struct-ibmveth_adapter-correctl.patch
 	patches.suse/net-ibmveth-Reset-the-adapter-when-unexpected-states.patch
 	patches.suse/net-ibmveth-added-KUnit-tests-for-some-buffer-pool-f.patch
