- ixgbe: add support for devlink reload (jsc#PED-12380 bsc#1245410   bsc#1246128). - Refresh   patches.suse/bsc1170284-ixgbe_dont_check_firmware_errors.patch.

--- a/series.conf
+++ b/series.conf
@@ -9112,6 +9112,7 @@
 	patches.suse/ixgbe-add-E610-functions-getting-PBA-and-FW-ver-info.patch
 	patches.suse/ixgbe-extend-.info_get-with-stored-versions.patch
 	patches.suse/ixgbe-add-device-flash-update-via-devlink.patch
+	patches.suse/ixgbe-add-support-for-devlink-reload.patch
 	patches.suse/net-ibmveth-Indented-struct-ibmveth_adapter-correctl.patch
 	patches.suse/net-ibmveth-Reset-the-adapter-when-unexpected-states.patch
 	patches.suse/net-ibmveth-added-KUnit-tests-for-some-buffer-pool-f.patch
