blacklist.conf: Add "objtool/rust: add one more `noreturn` Rust function for Rust 1.87.0"
Rust only.

--- a/blacklist.conf
+++ b/blacklist.conf
@@ -407,3 +407,4 @@ f9af88a3d384c8b55beb5dc5483e5da0135fadbd # kABI breakage
 ef753d66051ca03bee1982ce047f9eaf90f81ab4 # clang only
 1154bbd326de4453858cf78cf29420888b3ffd52 # too complex, not worth it
 a3cd5f507b72c0532c3345b6913557efab34f405 # rust
+19f5ca461d5fc09bdf93a9f8e4bd78ed3a49dc71 # rust
