--- a/series.conf
+++ b/series.conf
@@ -9113,6 +9113,7 @@
 	patches.suse/ixgbe-extend-.info_get-with-stored-versions.patch
 	patches.suse/ixgbe-add-device-flash-update-via-devlink.patch
 	patches.suse/ixgbe-add-support-for-devlink-reload.patch
+	patches.suse/ixgbe-add-FW-API-version-check.patch
 	patches.suse/net-ibmveth-Indented-struct-ibmveth_adapter-correctl.patch
 	patches.suse/net-ibmveth-Reset-the-adapter-when-unexpected-states.patch
 	patches.suse/net-ibmveth-added-KUnit-tests-for-some-buffer-pool-f.patch
