--- a/blacklist.conf
+++ b/blacklist.conf
@@ -408,3 +408,4 @@ ef753d66051ca03bee1982ce047f9eaf90f81ab4 # clang only
 1154bbd326de4453858cf78cf29420888b3ffd52 # too complex, not worth it
 a3cd5f507b72c0532c3345b6913557efab34f405 # rust
 19f5ca461d5fc09bdf93a9f8e4bd78ed3a49dc71 # rust
+cbeaa41dfe26b72639141e87183cb23e00d4b0dd # rust
