objtool: Add missing endian conversion to read_annotate() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -9887,6 +9887,7 @@
 	patches.suse/firmware-arm_ffa-Fix-memory-leak-by-freeing-notifier.patch
 	patches.suse/powercap-intel_rapl-Do-not-change-CLAMPING-bit-if-EN.patch
 	patches.suse/i2c-designware-Fix-an-initialization-issue.patch
+	patches.suse/objtool-Add-missing-endian-conversion-to-read_annotate.patch
 	patches.suse/x86-bugs-Add-a-Transient-Scheduler-Attacks-mitigation.patch
 	patches.suse/KVM-SVM-Advertise-TSA-CPUID-bits-to-guests.patch
 	patches.suse/x86-microcode-AMD-Add-TSA-microcode-SHAs.patch
