objtool: Silence more KCOV warnings, part 2 (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -7849,6 +7849,7 @@
 	patches.suse/objtool-media-dib8000-Prevent-divide-by-zero-in-dib8.patch
 	patches.suse/objtool-panic-Disable-SMAP-in-__stack_chk_fail.patch
 	patches.suse/objtool-Fix-segfault-in-ignore_unreachable_insn.patch
+	patches.suse/objtool-Silence-more-KCOV-warnings-part-2.patch
 	patches.suse/objtool-Fix-verbose-disassembly-if-CROSS_COMPILE-isn.patch
 	patches.suse/x86-paravirt-Move-halt-paravirt-calls-under-CONFIG_PARAVIR.patch
 	patches.suse/x86-tdx-Fix-arch_safe_halt-execution-for-TDX-VMs.patch
