--- a/series.conf
+++ b/series.conf
@@ -2246,6 +2246,7 @@
 	patches.suse/remoteproc-qcom_q6v5_pas-disable-auto-boot-for-wpss.patch
 	patches.suse/remoteproc-qcom_q6v5_mss-Re-order-writes-to-the-IMEM.patch
 	patches.suse/selftests-mount_setattr-Fix-failures-on-64K-PAGE_SIZ.patch
+	patches.suse/fs-proc-kcore.c-Clear-ret-value-in-read_kcore_iter-after-s.patch
 	patches.suse/fs_parser-update-mount_api-doc-to-match-function-sig.patch
 	patches.suse/RISC-V-KVM-Allow-Smnpm-and-Ssnpm-extensions-for-gues.patch
 	patches.suse/kvm-vfio-Constify-struct-kvm_device_ops.patch
