--- a/series.conf
+++ b/series.conf
@@ -7267,6 +7267,7 @@
 	patches.suse/btrfs-fix-non-empty-delayed-iputs-list-on-unmount-du.patch
 	patches.suse/btrfs-fix-block-group-refcount-race-in-btrfs_create_.patch
 	patches.suse/btrfs-harden-block_group-bg_list-against-list_del-ra.patch
+	patches.suse/btrfs-make-btrfs_discard_workfn-block_group-ref-expl.patch
 	patches.suse/btrfs-prepare-btrfs_page_mkwrite-for-large-folios.patch
 	patches.suse/btrfs-simplify-condition-for-logging-new-dentries-at-btrfs.patch
 	patches.suse/btrfs-remove-end_no_trans-label-from-btrfs_log_inode_paren.patch
