soc: aspeed: lpc-snoop: Don't disable channels that aren't enabled (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -32994,6 +32994,7 @@
 	patches.suse/kasan-remove-kasan_find_vm_area-to-prevent-possible-.patch
 	patches.suse/HID-core-ensure-__hid_request-reserves-the-report-ID.patch
 	patches.suse/soc-aspeed-lpc-snoop-Cleanup-resources-in-stack-orde.patch
+	patches.suse/soc-aspeed-lpc-snoop-Don-t-disable-channels-that-are.patch
 
 	########################################################
 	# end of sorted patches
