HID: core: ensure __hid_request reserves the report ID as the first byte (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -32992,6 +32992,7 @@
 	patches.suse/drm-tegra-nvdec-Fix-dma_alloc_coherent-error-check.patch
 	patches.suse/maple_tree-fix-mt_destroy_walk-on-root-leaf-node.patch
 	patches.suse/kasan-remove-kasan_find_vm_area-to-prevent-possible-.patch
+	patches.suse/HID-core-ensure-__hid_request-reserves-the-report-ID.patch
 
 	########################################################
 	# end of sorted patches
