HID: core: ensure __hid_request reserves the report ID as the first byte (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -9943,6 +9943,7 @@
 	patches.suse/drm-imagination-Fix-kernel-crash-when-hard-resetting.patch
 	patches.suse/maple_tree-fix-mt_destroy_walk-on-root-leaf-node.patch
 	patches.suse/kasan-remove-kasan_find_vm_area-to-prevent-possible-.patch
+	patches.suse/HID-core-ensure-__hid_request-reserves-the-report-ID.patch
 
 	# out-of-tree patches
 	patches.suse/powerpc-pseries-dlpar-Search-DRC-index-from-ibm-drc-.patch
