--- a/series.conf
+++ b/series.conf
@@ -9944,6 +9944,7 @@
 	patches.suse/maple_tree-fix-mt_destroy_walk-on-root-leaf-node.patch
 	patches.suse/kasan-remove-kasan_find_vm_area-to-prevent-possible-.patch
 	patches.suse/HID-core-ensure-__hid_request-reserves-the-report-ID.patch
+	patches.suse/soc-aspeed-lpc-snoop-Cleanup-resources-in-stack-orde.patch
 
 	# out-of-tree patches
 	patches.suse/powerpc-pseries-dlpar-Search-DRC-index-from-ibm-drc-.patch
