--- a/blacklist.conf
+++ b/blacklist.conf
@@ -967,3 +967,4 @@ c0e473a0d226479e8e925d5ba93f751d8df628e9 # CVE-2025-38073 https://bugzilla.suse.
 86bc9c742426a16b52a10ef61f5b721aecca2344 # CVE-2025-38280, does not affect our kernel, https://bugzilla.suse.com/show_bug.cgi?id=1246270#c1
 2329f250e04d3b8e78b36a68b9880ca7750a07ef # we don't support AMD SHA microcode infrastructure
 805b743fc163f1abef7ce1bea8eca8dfab5b685b # we don't support AMD SHA microcode infrastructure
+a82b26451de126a5ae130361081986bc459afe9b # not applicable
