ptp: fix breakage after ptp_vclock_in_use() rework (bsc#1246506).

--- a/series.conf
+++ b/series.conf
@@ -32887,6 +32887,7 @@
 	patches.suse/hwmon-occ-Rework-attribute-registration-for-stack-us.patch
 	patches.suse/hwmon-occ-fix-unaligned-accesses.patch
 	patches.suse/can-tcan4x5x-fix-power-regulator-retrieval-during-pr.patch
+	patches.suse/ptp-fix-breakage-after-ptp_vclock_in_use-rework.patch
 	patches.suse/net-sched-fix-use-after-free-in-taprio_dev_notifier.patch
 	patches.suse/net-ice-Perform-accurate-aRFS-flow-match.patch
 	patches.suse/e1000e-set-fixed-clock-frequency-indication-for-Nahu.patch
