--- a/series.conf
+++ b/series.conf
@@ -53817,6 +53817,7 @@
 	patches.suse/hwmon-occ-fix-unaligned-accesses.patch
 	patches.suse/can-tcan4x5x-fix-power-regulator-retrieval-during-pr.patch
 	patches.suse/bnxt_en-Fix-double-invocation-of-bnxt_ulp_stop-bnxt_.patch
+	patches.suse/ptp-fix-breakage-after-ptp_vclock_in_use-rework.patch
 	patches.suse/net-sched-fix-use-after-free-in-taprio_dev_notifier.patch
 	patches.suse/net-ice-Perform-accurate-aRFS-flow-match.patch
 	patches.suse/ice-fix-eswitch-code-memory-leak-in-reset-scenario.patch
