--- a/series.conf
+++ b/series.conf
@@ -9473,6 +9473,7 @@
 	patches.suse/mm-page_alloc-remove-redundant-READ_ONCE.patch
 	patches.suse/selftests-mm-restore-default-nr_hugepages-value-duri.patch
 	patches.suse/sched-numa-skip-VMA-scanning-on-memory-pinned-to-one-NUMA-node-via-cpuset.mems.patch
+	patches.suse/sched-numa-add-tracepoint-that-tracks-the-skipping-of-numa-balancing-due-to-cpuset-memory-pinning.patch
 	patches.suse/Squashfs-check-return-result-of-sb_min_blocksize.patch
 	patches.suse/watchdog-fix-watchdog-may-detect-false-positive-of-s.patch
 	patches.suse/ipc-fix-to-protect-IPCS-lookups-using-RCU.patch
