--- a/series.conf
+++ b/series.conf
@@ -10064,6 +10064,7 @@
 	patches.suse/sched-psi-Optimize-psi_group_change-cpu_clock-usage.patch
 	patches.suse/sched-deadline-Less-agressive-dl_server-handling.patch
 	patches.suse/sched-fair-Use-protect_slice-instead-of-direct-comparison.patch
+	patches.suse/sched-fair-Fix-NO_RUN_TO_PARITY-case.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Revise-logging-format-for-failed-CT-MIB-re.patch
