sched: Fix preemption string of preempt_dynamic_none (bsc#1234634 (Scheduler functional and performance backports)).

--- a/series.conf
+++ b/series.conf
@@ -10005,6 +10005,7 @@
 	patches.suse/perf-core-Fix-the-WARN_ON_ONCE-is-out-of-lock-protected-region.patch
 	patches.suse/perf-Revert-to-requiring-CAP_SYS_ADMIN-for-uprobes.patch
 	patches.suse/objtool-Add-missing-endian-conversion-to-read_annotate.patch
+	patches.suse/sched-Fix-preemption-string-of-preempt_dynamic_none.patch
 	patches.suse/x86-bugs-Add-a-Transient-Scheduler-Attacks-mitigation.patch
 	patches.suse/KVM-SVM-Advertise-TSA-CPUID-bits-to-guests.patch
 	patches.suse/x86-microcode-AMD-Add-TSA-microcode-SHAs.patch
