sched/fair: Use READ_ONCE() to read sg->asym_prefer_cpu (bsc#1234634 (Scheduler functional and performance backports)).

--- a/series.conf
+++ b/series.conf
@@ -8902,6 +8902,7 @@
 	patches.suse/sched-fair-Allow-decaying-util_est-when-util_avg-CPU-capa.patch
 	patches.suse/sched-rt-Fix-race-in-push_rt_task.patch
 	patches.suse/sched-isolation-Make-use-of-more-than-one-housekeeping-cpu.patch
+	patches.suse/sched-fair-Use-READ_ONCE-to-read-sg-asym_prefer_cpu.patch
 	patches.suse/perf-Ensure-bpf_perf_link-path-is-properly-serialized.patch
 	patches.suse/perf-x86-amd-uncore-Remove-unused-struct-amd_uncore_ctx-no.patch
 	patches.suse/perf-x86-amd-uncore-Prevent-UMC-counters-from-saturating.patch
