sched/fair: Reimplement NEXT_BUDDY to align with EEVDF goals (bsc#1234634 (Scheduler functional and performance backports)).

--- a/series.conf
+++ b/series.conf
@@ -10177,6 +10177,7 @@
 	# eligible tasks under limited circumstances. Primarily
 	# of important to dbench under xfs
 	patches.suse/sched-fair-Enable-scheduler-feature-NEXT_BUDDY.patch
+	patches.suse/sched-fair-Reimplement-NEXT_BUDDY-to-align-with-EEVDF-goals.patch
 
 	########################################################
 	# Memory management
