sched/fair: Always trigger resched at the end of a protected period (bsc#1234634 (Scheduler functional and performance backports)).

--- a/series.conf
+++ b/series.conf
@@ -10068,6 +10068,7 @@
 	patches.suse/sched-fair-Remove-spurious-shorter-slice-preemption.patch
 	patches.suse/sched-fair-Limit-run-to-parity-to-the-min-slice-of-enqueued-entities.patch
 	patches.suse/sched-fair-Fix-entity-s-lag-with-run-to-parity.patch
+	patches.suse/sched-fair-Always-trigger-resched-at-the-end-of-a-protected-period.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Revise-logging-format-for-failed-CT-MIB-re.patch
