--- a/series.conf
+++ b/series.conf
@@ -8908,6 +8908,7 @@
 	patches.suse/sched-fair-Adhere-to-place_entity-constraints.patch
 	patches.suse/sched-core-Tweak-wait_task_inactive-to-force-dequeue-sched_delayed-tasks.patch
 	patches.suse/sched-fair-Fixup-wake_up_sync-vs-DELAYED_DEQUEUE.patch
+	patches.suse/sched-util_est-Simplify-condition-for-util_est_-en-de-queue.patch
 	patches.suse/perf-Ensure-bpf_perf_link-path-is-properly-serialized.patch
 	patches.suse/perf-x86-amd-uncore-Remove-unused-struct-amd_uncore_ctx-no.patch
 	patches.suse/perf-x86-amd-uncore-Prevent-UMC-counters-from-saturating.patch
