--- a/series.conf
+++ b/series.conf
@@ -10061,6 +10061,7 @@
 	# tip/tip
 	patches.suse/sched-eevdf-Correct-the-comment-in-place_entity.patch
 	patches.suse/sched-fair-Bump-sd-max_newidle_lb_cost-when-newidle-balance-fails.patch
+	patches.suse/sched-psi-Optimize-psi_group_change-cpu_clock-usage.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Revise-logging-format-for-failed-CT-MIB-re.patch
