--- a/series.conf
+++ b/series.conf
@@ -8899,6 +8899,7 @@
 	patches.suse/sched-Fix-trace_sched_switch-.prev_state.patch
 	patches.suse/sched-topology-improve-topology_span_sane-speed.patch
 	patches.suse/sched-topology-Refinement-to-topology_span_sane-speedup.patch
+	patches.suse/sched-fair-Allow-decaying-util_est-when-util_avg-CPU-capa.patch
 	patches.suse/perf-Ensure-bpf_perf_link-path-is-properly-serialized.patch
 	patches.suse/perf-x86-amd-uncore-Remove-unused-struct-amd_uncore_ctx-no.patch
 	patches.suse/perf-x86-amd-uncore-Prevent-UMC-counters-from-saturating.patch
