sched/fair: Remove spurious shorter slice preemption (bsc#1234634 (Scheduler functional and performance backports)).

--- a/series.conf
+++ b/series.conf
@@ -10065,6 +10065,7 @@
 	patches.suse/sched-deadline-Less-agressive-dl_server-handling.patch
 	patches.suse/sched-fair-Use-protect_slice-instead-of-direct-comparison.patch
 	patches.suse/sched-fair-Fix-NO_RUN_TO_PARITY-case.patch
+	patches.suse/sched-fair-Remove-spurious-shorter-slice-preemption.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Revise-logging-format-for-failed-CT-MIB-re.patch
