sched: Fix trace_sched_switch(.prev_state) (bsc#1234634 (Scheduler functional and performance backports)).

--- a/series.conf
+++ b/series.conf
@@ -8896,6 +8896,7 @@
 	patches.suse/powerpc-boot-Fix-build-with-gcc-15.patch
 	patches.suse/KVM-PPC-Book3S-HV-Fix-IRQ-map-warnings-with-XICS-on-.patch
 	patches.suse/powerpc-pseries-iommu-Fix-kmemleak-in-TCE-table-user.patch
+	patches.suse/sched-Fix-trace_sched_switch-.prev_state.patch
 	patches.suse/sched-topology-improve-topology_span_sane-speed.patch
 	patches.suse/sched-topology-Refinement-to-topology_span_sane-speedup.patch
 	patches.suse/perf-Ensure-bpf_perf_link-path-is-properly-serialized.patch
