--- a/series.conf
+++ b/series.conf
@@ -8905,6 +8905,7 @@
 	patches.suse/sched-fair-Use-READ_ONCE-to-read-sg-asym_prefer_cpu.patch
 	patches.suse/sched-topology-Introduce-sched_update_asym_prefer_cpu.patch
 	patches.suse/sched-debug-Print-the-local-group-s-asym_prefer_cpu.patch
+	patches.suse/sched-fair-Adhere-to-place_entity-constraints.patch
 	patches.suse/perf-Ensure-bpf_perf_link-path-is-properly-serialized.patch
 	patches.suse/perf-x86-amd-uncore-Remove-unused-struct-amd_uncore_ctx-no.patch
 	patches.suse/perf-x86-amd-uncore-Prevent-UMC-counters-from-saturating.patch
