sched/deadline: Fix dl_server runtime calculation formula (bsc#1234634 (Scheduler functional and performance backports)).

--- a/series.conf
+++ b/series.conf
@@ -10007,6 +10007,7 @@
 	patches.suse/objtool-Add-missing-endian-conversion-to-read_annotate.patch
 	patches.suse/sched-Fix-preemption-string-of-preempt_dynamic_none.patch
 	patches.suse/sched-core-Fix-migrate_swap-vs.-hotplug.patch
+	patches.suse/sched-deadline-Fix-dl_server-runtime-calculation-formula.patch
 	patches.suse/x86-bugs-Add-a-Transient-Scheduler-Attacks-mitigation.patch
 	patches.suse/KVM-SVM-Advertise-TSA-CPUID-bits-to-guests.patch
 	patches.suse/x86-microcode-AMD-Add-TSA-microcode-SHAs.patch
