sched/fair: Fix entity's lag with run to parity (bsc#1234634 (Scheduler functional and performance backports)).

--- a/series.conf
+++ b/series.conf
@@ -10067,6 +10067,7 @@
 	patches.suse/sched-fair-Fix-NO_RUN_TO_PARITY-case.patch
 	patches.suse/sched-fair-Remove-spurious-shorter-slice-preemption.patch
 	patches.suse/sched-fair-Limit-run-to-parity-to-the-min-slice-of-enqueued-entities.patch
+	patches.suse/sched-fair-Fix-entity-s-lag-with-run-to-parity.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Revise-logging-format-for-failed-CT-MIB-re.patch
