--- a/series.conf
+++ b/series.conf
@@ -32985,6 +32985,7 @@
 	patches.suse/drm-ttm-fix-error-handling-in-ttm_buffer_object_tran.patch
 	patches.suse/drm-bridge-panel-move-prepare_prev_first-handling-to.patch
 	patches.suse/drm-sched-Increment-job-count-before-swapping-tail-s.patch
+	patches.suse/drm-gem-Acquire-references-on-GEM-handles-for-frameb.patch
 	patches.suse/drm-i915-selftests-Change-mock_request-to-return-err.patch
 	patches.suse/drm-i915-gt-Fix-timeline-left-held-on-VMA-alloc-erro.patch
 	patches.suse/drm-i915-gsc-mei-interrupt-top-half-should-be-in-irq.patch
