--- a/series.conf
+++ b/series.conf
@@ -20817,6 +20817,7 @@
 	patches.suse/xhci-dbc-Replace-custom-return-value-with-proper-Lin.patch
 	patches.suse/xhci-Reconfigure-endpoint-0-max-packet-size-only-dur.patch
 	patches.suse/xhci-fix-possible-null-pointer-deref-during-xhci-urb.patch
+	patches.suse/usb-cdnsp-Replace-snprintf-with-the-safer-scnprintf-.patch
 	patches.suse/usb-core-Don-t-force-USB-generic_subclass-drivers-to.patch
 	patches.suse/usb-core-Allow-subclassed-USB-drivers-to-override-us.patch
 	patches.suse/r8152-Choose-our-USB-config-with-choose_configuratio.patch
