--- a/series.conf
+++ b/series.conf
@@ -33000,6 +33000,7 @@
 	patches.suse/usb-gadget-u_serial-Fix-race-condition-in-TTY-wakeup.patch
 	patches.suse/usb-xhci-Skip-xhci_reset-in-xhci_resume-if-xhci-is-b.patch
 	patches.suse/Revert-usb-xhci-Implement-xhci_handshake_check_state.patch
+	patches.suse/usb-cdnsp-Fix-issue-with-CV-Bad-Descriptor-test.patch
 	patches.suse/usb-typec-altmodes-displayport-do-not-index-invalid-.patch
 	patches.suse/usb-typec-displayport-Fix-potential-deadlock.patch
 	patches.suse/usb-xhci-quirk-for-data-loss-in-ISOC-transfers.patch
