Bluetooth: btusb: QCA: Fix downloading wrong NVM for WCN6855 GF variant without board ID (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -33054,6 +33054,7 @@
 	patches.suse/Bluetooth-hci_sync-fix-connectable-extended-advertis.patch
 	patches.suse/Bluetooth-SMP-If-an-unallowed-command-is-received-co.patch
 	patches.suse/Bluetooth-SMP-Fix-using-HCI_ERROR_REMOTE_USER_TERM-o.patch
+	patches.suse/Bluetooth-btusb-QCA-Fix-downloading-wrong-NVM-for-WC.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Revise-logging-format-for-failed-CT-MIB-re.patch
