--- a/series.conf
+++ b/series.conf
@@ -33033,6 +33033,7 @@
 	patches.suse/net-phy-smsc-Fix-Auto-MDIX-configuration-when-disabl.patch
 	patches.suse/net-phy-smsc-Fix-link-failure-in-forced-mode-with-Au.patch
 	patches.suse/wifi-zd1211rw-Fix-potential-NULL-pointer-dereference.patch
+	patches.suse/wifi-prevent-A-MSDU-attacks-in-mesh-networks.patch
 	patches.suse/wifi-mt76-mt7925-fix-the-wrong-config-for-tx-interru.patch
 	patches.suse/wifi-mt76-mt7925-fix-invalid-array-index-in-ssid-ass.patch
 	patches.suse/wifi-mt76-mt7925-Fix-null-ptr-deref-in-mt7925_therma.patch
