--- a/series.conf
+++ b/series.conf
@@ -17186,6 +17186,7 @@
 	patches.suse/thunderbolt-Fix-one-kernel-doc-comment.patch
 	patches.suse/usb-typec-tcpm-Fix-NULL-pointer-dereference-in-tcpm_.patch
 	patches.suse/usb-typec-fsa4480-Add-support-to-swap-SBU-orientatio.patch
+	patches.suse/usb-cdnsp-remove-TRB_FLUSH_ENDPOINT-command.patch
 	patches.suse/usb-raw-gadget-properly-handle-interrupted-requests.patch
 	patches.suse/usb-storage-set-1.50-as-the-lower-bcdDevice-for-olde.patch
 	patches.suse/dmaengine-idxd-Register-dsa_bus_type-before-register.patch
