HID: lenovo: Add support for ThinkPad X1 Tablet Thin Keyboard Gen2 (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -32940,6 +32940,7 @@
 	patches.suse/HID-quirks-Add-quirk-for-2-Chicony-Electronics-HP-5M.patch
 	patches.suse/HID-Add-IGNORE-quirk-for-SMARTLINKTECHNOLOGY.patch
 	patches.suse/HID-lenovo-Restrict-F7-9-11-mode-to-compact-keyboard.patch
+	patches.suse/HID-lenovo-Add-support-for-ThinkPad-X1-Tablet-Thin-K.patch
 	patches.suse/ALSA-usb-audio-Fix-out-of-bounds-read-in-snd_usb_get.patch
 	patches.suse/ASoC-amd-yc-Add-DMI-quirk-for-Lenovo-IdeaPad-Slim-5-.patch
 	patches.suse/ALSA-hda-realtek-Fix-built-in-mic-on-ASUS-VivoBook-X-7ab6847.patch
