usb: net: sierra: check for no status endpoint (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -33049,6 +33049,7 @@
 	patches.suse/soc-aspeed-lpc-snoop-Cleanup-resources-in-stack-orde.patch
 	patches.suse/soc-aspeed-lpc-snoop-Don-t-disable-channels-that-are.patch
 	patches.suse/net-phy-Don-t-register-LEDs-for-genphy.patch
+	patches.suse/usb-net-sierra-check-for-no-status-endpoint.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Revise-logging-format-for-failed-CT-MIB-re.patch
