HID: Add IGNORE quirk for SMARTLINKTECHNOLOGY (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -32938,6 +32938,7 @@
 	patches.suse/HID-wacom-fix-memory-leak-on-sysfs-attribute-creatio.patch
 	patches.suse/HID-wacom-fix-kobject-reference-count-leak.patch
 	patches.suse/HID-quirks-Add-quirk-for-2-Chicony-Electronics-HP-5M.patch
+	patches.suse/HID-Add-IGNORE-quirk-for-SMARTLINKTECHNOLOGY.patch
 	patches.suse/HID-lenovo-Restrict-F7-9-11-mode-to-compact-keyboard.patch
 	patches.suse/ALSA-usb-audio-Fix-out-of-bounds-read-in-snd_usb_get.patch
 	patches.suse/ASoC-amd-yc-Add-DMI-quirk-for-Lenovo-IdeaPad-Slim-5-.patch
